# bidding-equilibria

./: README.md  output.txt  pyproject.toml  requirements.txt
bidding_equilibria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: __init__.py  default_loader.py  defaults.yaml  reference_cases.yaml  regime_definitions.yaml
driver/: run_PoA.py  run_full_pipeline.py
drivers/: best_response_algo.py  best_response_algo_MS.py  best_response_algo_per_scenario.py  best_response_algo_regret_min.py  stochastic_best_response.py
graveyard/: MPEC_MS_SOS1.py
models/: __init__.py  helper.py
results/: _tmp_expanded_smoke.json  best_response_results.json  dro_poa_bidding_blocks_alpha_bounds.json  dro_poa_bidding_blocks_slack_binary_fix.json  dro_poa_optimization_bidding_blocks_results.json  feature_normalizer_stats.json  feature_normalizer_stats_gradient.json  gradient_bid_training_expanded_results.json  gradient_policy_training_kkt_nn_results.json  gradient_policy_training_results.json  merit_order_best_response_results.json  poa_bidding_blocks_alpha_bounds.json  poa_bidding_blocks_alpha_bounds_T4.json  poa_bidding_blocks_alpha_bounds_T6.json  poa_bidding_blocks_alpha_bounds_T8.json  poa_bidding_blocks_slack_binary_fix.json  poa_bidding_blocks_slack_binary_fix_T4.json  poa_bidding_blocks_slack_binary_fix_T6.json  poa_bidding_blocks_slack_binary_fix_T8.json  poa_bidding_blocks_tightening_report.json  poa_bidding_blocks_tightening_report_T4.json  poa_bidding_blocks_tightening_report_T6.json  poa_bidding_blocks_tightening_report_T8.json  (+10 more)
(+190 files in other folders)
